--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -6,7 +6,6 @@
 
     <string name="menu_share">Partage</string>
     <string name="menu_help">Aide</string>
-    <string name="menu_info">Détails</string>
     <string name="menu_receive">Recevoir</string>
     <string name="menu_rename">Renommer &#8230;</string>
     <string name="menu_archive">Archiver</string>
@@ -357,4 +356,8 @@
     <string name="send_address_hint">Adresse ou OpenAlias XMR/BTC du Destinataire</string>
 
     <string name="status_wallet_connect_wrongversion">Node version incompatible - please upgrade!</string>
+
+    <string name="menu_info">Détails</string><!--Changed to: Show Secrets!-->
+    <string name="menu_streetmode">Street Mode</string>
+    <string name="info_streetmode_enabled">Street Mode enabled, tap for more info.</string>
 </resources>
