--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -6,7 +6,6 @@
 
     <string name="menu_share">Compartilhar</string>
     <string name="menu_help">Ajuda</string>
-    <string name="menu_info">Detalhes</string>
     <string name="menu_receive">Receber</string>
     <string name="menu_rename">Renomear &#8230;</string>
     <string name="menu_archive">Arquivar</string>
@@ -346,4 +345,7 @@
     <string name="nfc_tag_read_success">Sucesso na leitura da tag</string>
     <string name="nfc_tag_tap">NFC disponível!</string>
 
+    <string name="menu_info">Detalhes</string><!--Changed to: Show Secrets!-->
+    <string name="menu_streetmode">Street Mode</string>
+    <string name="info_streetmode_enabled">Street Mode enabled, tap for more info.</string>
 </resources>
