--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -6,7 +6,6 @@
 
     <string name="menu_share">Împărtășește</string>
     <string name="menu_help">Ajutor</string>
-    <string name="menu_info">Detalii</string>
     <string name="menu_receive">Primește</string>
     <string name="menu_rename">Redenumește &#8230;</string>
     <string name="menu_archive">Arhivă</string>
@@ -354,4 +353,8 @@
     <string name="send_address_hint">Receiver\'s XMR/BTC Address or OpenAlias</string>
 
     <string name="status_wallet_connect_wrongversion">Node version incompatible - please upgrade!</string>
+
+    <string name="menu_info">Detalii</string><!--Changed to: Show Secrets!-->
+    <string name="menu_streetmode">Street Mode</string>
+    <string name="info_streetmode_enabled">Street Mode enabled, tap for more info.</string>
 </resources>
