--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -6,7 +6,6 @@
 
     <string name="menu_share">分享</string>
     <string name="menu_help">帮助</string>
-    <string name="menu_info">详细信息</string>
     <string name="menu_receive">收款</string>
     <string name="menu_rename">重新命名 &#8230;</string>
     <string name="menu_archive">封存</string>
@@ -352,4 +351,8 @@
     <string name="send_address_hint">Receiver\'s XMR/BTC Address or OpenAlias</string>
 
     <string name="status_wallet_connect_wrongversion">Node version incompatible - please upgrade!</string>
+
+    <string name="menu_info">详细信息</string><!--Changed to: Show Secrets!-->
+    <string name="menu_streetmode">Street Mode</string>
+    <string name="info_streetmode_enabled">Street Mode enabled, tap for more info.</string>
 </resources>
