--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -6,7 +6,6 @@
 
     <string name="menu_share">Del</string>
     <string name="menu_help">Hjelp</string>
-    <string name="menu_info">Detaljer</string>
     <string name="menu_receive">Motta</string>
     <string name="menu_rename">Gi nytt navn &#8230;</string>
     <string name="menu_archive">Arkiver</string>
@@ -354,4 +353,8 @@
     <string name="send_address_hint">Receiver\'s XMR/BTC Address or OpenAlias</string>
 
     <string name="status_wallet_connect_wrongversion">Node version incompatible - please upgrade!</string>
+
+    <string name="menu_info">Detaljer</string><!--Changed to: Show Secrets!-->
+    <string name="menu_streetmode">Street Mode</string>
+    <string name="info_streetmode_enabled">Street Mode enabled, tap for more info.</string>
 </resources>
