--- a/app/src/main/res/values-et/strings.xml
+++ b/app/src/main/res/values-et/strings.xml
@@ -351,9 +351,9 @@
     <string name="nfc_tag_read_success">Sildi lugemine õnnestus</string>
     <string name="nfc_tag_tap">NFC on saadaval!</string>
 
-    <string name="status_wallet_connect_wrongversion">Node version incompatible - please upgrade!</string>
+    <string name="status_wallet_connect_wrongversion">Serveri versioon ei sobi - palun uuenda!</string>
 
-    <string name="menu_info">Details</string><!--Changed to: Show Secrets!-->
-    <string name="menu_streetmode">Street Mode</string>
-    <string name="info_streetmode_enabled">Street Mode enabled, tap for more info.</string>
+    <string name="menu_info">Näita salajast infot</string>
+    <string name="menu_streetmode">Avalik režiim</string>
+    <string name="info_streetmode_enabled">Avalik režiim sisse lülitatud, puuduta lisainfo saamiseks.</string>
 </resources>
