--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -356,7 +356,7 @@
 
     <string name="status_wallet_connect_wrongversion">Versione del nodo incompatibile - si prega di aggiornare!</string>
 
-    <string name="menu_info">Dettagli</string><!--Changed to: Show Secrets!-->
+    <string name="menu_info">Mostra i segreti!</string>
     <string name="menu_streetmode">Modalità strada</string>
     <string name="info_streetmode_enabled">Modalità strada abilitata, tocca per maggiori informazioni.</string>
 </resources>
