--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -14,7 +14,7 @@
 
     <string name="password_weak">Continuez de taper &#8230;</string>
     <string name="password_fair">Bof &#8230;</string>
-    <string name="password_good">Allez, vous pouvez mieux faire!</string>
+    <string name="password_good">Allez, vous pouvez mieux faire !</string>
     <string name="password_strong">On y arrive &#8230;</string>
     <string name="password_very_strong">Yeah baby, h4ck3r style !</string>
 
@@ -340,30 +340,30 @@
     <string name="menu_info">Montrer les secrets !</string><!--Changed to: Show Secrets!-->
     <string name="menu_streetmode">Mode Urbain</string>
 
-    <string name="info_nodes_enabled">Node-o-matiC enabled, tap for more info.</string>
-    <string name="node_height">Last block updated: %1$s</string>
-    <string name="label_nodes">Nodes</string>
-    <string name="node_name_hint">Node Name (Optional)</string>
-    <string name="node_address_hint">Hostname</string>
+    <string name="info_nodes_enabled">Node-o-matiC activé, touchez pour en savoir plus.</string>
+    <string name="node_height">Dernier bloc mis à jour: %1$s</string>
+    <string name="label_nodes">Noeuds</string>
+    <string name="node_name_hint">Nom du noeud (Optionnel)</string>
+    <string name="node_address_hint">Nom d'hote</string>
     <string name="node_port_hint">Port</string>
-    <string name="node_user_hint">Username (Optional)</string>
-    <string name="node_pass_hint">Password (Optional)</string>
-    <string name="node_host_unresolved">Cannot resolve host</string>
-    <string name="node_host_empty">We need this!</string>
-    <string name="node_port_numeric">Must be numeric</string>
-    <string name="node_port_range">Must be 1&#8211;65535</string>
-    <string name="node_fab_add">Add Node</string>
-    <string name="node_refresh_hint">Touch to refresh!</string>
-    <string name="node_test_error">CONNECTION ERROR %1$d</string>
-    <string name="node_general_error">CONNECTION ERROR</string>
-    <string name="node_auth_error">AUTHENTICATION FAILED</string>
-    <string name="node_result_label">Test Result:</string>
-    <string name="node_result">Height: %1$s (v%2$d), Ping: %3$.0fms, IP: %4$s</string>
-    <string name="node_testing">Testing IP: %1$s &#8230;</string>
-    <string name="node_refresh_wait">Please wait for scan to finish</string>
-    <string name="node_create_hint">Touch to select or add nodes</string>
-    <string name="node_pull_hint">Add nodes manually or pull down to scan</string>
-    <string name="node_scanning">Scanning network&#8230;</string>
-    <string name="node_nobookmark">Automatically bookmarked best %1$d nodes</string>
+    <string name="node_user_hint">Nom d'utilisateur (Optionnel)</string>
+    <string name="node_pass_hint">Mot de Passe (Optionnel)</string>
+    <string name="node_host_unresolved">Hote non trouvé</string>
+    <string name="node_host_empty">Nous avons besoin de cette information !!</string>
+    <string name="node_port_numeric">Doit etre un nombre</string>
+    <string name="node_port_range">Doit etre 1&#8211;65535</string>
+    <string name="node_fab_add">Ajouter un Noeud</string>
+    <string name="node_refresh_hint">Toucher pour rafraichir l'écran!</string>
+    <string name="node_test_error">ERREUR DE CONNEXION  %1$d</string>
+    <string name="node_general_error">ERREUR DE CONNEXION</string>
+    <string name="node_auth_error">ÉCHEC D'AUTHENTIFICATION</string>
+    <string name="node_result_label">Résultat de test:</string>
+    <string name="node_result">Hauteur: %1$s (v%2$d), Ping: %3$.0fms, IP: %4$s</string>
+    <string name="node_testing">Test de  IP: %1$s &#8230;</string>
+    <string name="node_refresh_wait">Veuillez attendre que le scan se termine</string>
+    <string name="node_create_hint">Toucher l'écran pour choisir ou ajouter des noeuds</string>
+    <string name="node_pull_hint">Ajouter des noeds manuellement ou descendez pour effectuer un scan</string>
+    <string name="node_scanning">Scan du réseau en cours&#8230;</string>
+    <string name="node_nobookmark">Les meilleurs %1$d noeuds ont été ajoutés automatiquement aux favoris</string>
     <string name="label_test">Test</string><!--note: as in "Test a network connection"-->
 </resources>
